K8S/ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-ui
  namespace: default
  labels:
    name: callbook
spec:
  containers:
  - name: user-ui
    image: us-east1-docker.pkg.dev/kubernetes-389210/callbooking/user-ui
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - name: user-ui-port
      containerPort: 3000
