K8S/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app
  namespace: default
  labels:
    name: callbook
spec:
  replicas: 2
  selector:
    matchLabels:
      name: callbook
  template:
    metadata:
      labels:
        name: callbook
    spec:
      containers:
      - image: us-east1-docker.pkg.dev/kubernetes-389210/callbooking/user-api
        imagePullPolicy: IfNotPresent
        command: [ "/bin/bash", "-c", "--" ] 👈
        args: [ "while true; do sleep 30; done;" ]
        name: app
        resources:
          requests:
            cpu: "25m"
            memory: "125M"
          limits: 
            cpu: "50m"
            memory: "250M"  
        ports:
        - containerPort: 1004
