K8S/admin-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-api-service
spec:
  type: NodePort
  selector:
    name: callbook
  ports:
  - name: admin-api-request
    port: 1002
    targetPort: 1004
    nodePort: 30050
