K8S/admin-ui-ext-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-ext-service
  namespace: ingress
spec:
  type: ExternalName
  externalName: admin-ui-service.user.svc.cluster.local
  ports:
  - port: 1002
