K8S/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-service
  namespace: admin
spec:
  type: LoadBalancer
  selector:
    name: callbook
  ports:
  - name: admin-ui-request
    port: 3003
    targetPort: 3000
