K8S/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: db
  name:  mongo-db-service
spec:
  type: ClusterIP
  selector:
    name:  callbook
  ports:
  - name: mongo-db-request
    port: 27017
    targetPort: 27017
