K8S/user-api-ext-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-ext-service
  namespace: user
spec:
  type: ExternalName
  externalName: mongo-db-service.db.svc.cluster.local
  ports:
  - port: 27017
