K8S/user-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  type: LoadBalancer
  selector:
    name: callbook
  ports:
  - name: user-api-request
    port: 5000
    targetPort: 1004
    nodePort: 5001
