K8S/user-ui-ext-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-ui-ext-service
  namespace: ingress
spec:
  type: ExternalName
  externalName: user-ui-service.user.svc.cluster.local
  ports:
  - port: 3001
