K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callbookingress
  namespace: ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-ui-ext-service
              port: 
                number: 3001
        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: admin-ui-ext-service
              port: 
                number: 1002
